# Optimization-of-Biclustering-via-SSVD

./: LICENSE  README.md  STA 663L Final Submission-Copy1.ipynb  STA 663L Final Submission.ipynb  STA 663L Final-company_data_application.ipynb  STA 663L Final-numba1.ipynb  STA 663L Final.ipynb  algorithms.py  company.txt  companyfraud.txt
.ipynb_checkpoints/: STA 663L Final Submission-checkpoint.ipynb  STA 663L Final Submission_in progress-checkpoint.ipynb  STA 663L Final-checkpoint.ipynb  STA 663L Final-numba1-checkpoint.ipynb
package/: README.md  Untitled.ipynb  pyvenv.cfg  setup.cfg
package/src/example_pkg_cathy10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/src/ssvd_pkg/: ssvd.py
package/src/ssvd_pkg_cathy10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
