[metadata]

name = ssvd-pkg-cathy10
version = 0.0.1
author = Eric Tay and Cathy Shi
author_email = eric.tay@duke.edu, cathy.shi@duke.edu
description = An optimized version of Sparse Singular Value Decomposition algorithm 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EricTay1997/STA-663L-Final/package
project_urls =
    Bug Tracker = https://github.com/EricTay1997/STA-663L-Final
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src